Added analytics on github link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/raklane?tab=repositories'"
+            onclick="
+            gtag('event', 'link_click', {
+              'event_category': 'External Link',
+              'event_label': 'Github redirect'
+            });
+            location.href='https://github.com/raklane?tab=repositories'"
           />
         </div>
       </div>
